# serializer version: 1
# name: test_entity_state
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'fake-device-1 Horizontal swing',
        'options': list([
          'Default',
          'FullSwing',
          'Left',
          'LeftCenter',
          'Center',
          'RightCenter',
          'Right',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'select.fake_device_1_horizontal_swing',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'Default',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'fake-device-1 Vertical swing',
        'options': list([
          'Default',
          'FullSwing',
          'FixedUpper',
          'FixedUpperMiddle',
          'FixedMiddle',
          'FixedLowerMiddle',
          'FixedLower',
          'SwingUpper',
          'SwingUpperMiddle',
          'SwingMiddle',
          'SwingLowerMiddle',
          'SwingLower',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'select.fake_device_1_vertical_swing',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'Default',
    }),
  ])
# ---
# name: test_registry_settings
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'Default',
          'FullSwing',
          'Left',
          'LeftCenter',
          'Center',
          'RightCenter',
          'Right',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.fake_device_1_horizontal_swing',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Horizontal swing',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Horizontal swing',
      'platform': 'gree',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'horizontal_swing',
      'unique_id': 'aabbcc112233_Horizontal Swing',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'Default',
          'FullSwing',
          'FixedUpper',
          'FixedUpperMiddle',
          'FixedMiddle',
          'FixedLowerMiddle',
          'FixedLower',
          'SwingUpper',
          'SwingUpperMiddle',
          'SwingMiddle',
          'SwingLowerMiddle',
          'SwingLower',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.fake_device_1_vertical_swing',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Vertical swing',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Vertical swing',
      'platform': 'gree',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'vertical_swing',
      'unique_id': 'aabbcc112233_Vertical Swing',
      'unit_of_measurement': None,
    }),
  ])
# ---
